# MyFirst

./: .rosinstall  .rosinstall.bak
aruco_ros/launch/: marker_publisher.launch  single.launch
barrett_hand_description/launch/: bh_alone.launch~
bhand_controller/examples/: rostopic_pub.txt
bhand_controller/launch/: bhand_controller.launch  bhand_controller.launch~  out-1.ogv  out.ogv
bhand_controller/src/bhand_controller/: bhand_node.py
opencv_tutorial/: CMakeLists.txt  package.xml
opencv_tutorial/src/: flip_image.cpp  image_sub.cpp  image_sub2.cpp  internal_cam_test.cpp
pose_est/: CMakeLists.txt  CMakeLists.txt~  package.xml
pose_est/src/: pose_est_source.cpp
ros_aruco/: CMakeLists.txt  CMakeLists.txt~
ros_aruco/launch/: ros_aruco.launch~
ros_aruco/src/: arKalman.cpp  arKalman.cpp~  ros_aruco.cpp  ros_aruco.cpp~  tf_broadcaster.cpp  tf_broadcaster_kalman.cpp  tf_broadcaster_kalman.cpp~  tf_pub_aruco.cpp  tf_pub_aruco.cpp.autosave
